--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <h1>PARKA <span>GYM</span></h1>
+        <h1>America <span>GYM</span></h1>
         <i class="fas fa-bars" style="display: none;" onclick="menu_open()"></i>
         <div id="menu">
             <i class="fas fa-times" onclick="menu_close()" style="display: none;"></i>
